# AstroBrain

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART_UI.md  QUICKSTART_WS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: logging_config.py  main.py  streamlit_ui.py  test_websocket_client.py  websocket_server.py
app/agent/: __init__.py  state.py
app/astrobrain/: astrobrain_app.py
app/core/: __init__.py  orbital_tools.py  plotting.py  utils.py  utils_tools.py
app/core/mission/: __init__.py  communication.py  duty_cycle.py  eclipse.py  mission_summery.py  power.py  propagator.py  sun_geometry.py  thermal.py  visibility.py
app/core/mission/tools/: __init__.py  communication.py  duty_cycle.py  eclipse.py  mission_summery.py  power.py  propagator.py  sun_geometry.py  thermal.py  visibility.py
app/core/mission/utils/: __init__.py  communication.py  duty_cycle.py  eclipse.py  mission_summery.py  power.py  propagator.py  sun_geometry.py  thermal.py  visibility.py
app/missionops/: graph.py  missionops_app.py  state.py  tool_factory.py
app/missionops/nodes/: __init__.py  clarify.py  deny.py  draft_final_response.py  mission_summary.py  orbit_propagator_visibility.py  power_comm_thermal_duty.py  proceed.py  re_evaluate.py  read_request.py  retrieve.py  retriever.py  sun_eclipse.py  tool_executor.py  understand.py  validator.py
app/orbitqa/: graph.py  orbitqa_app.py  state.py  tool_factory.py
app/orbitqa/nodes/: __init__.py  clarify.py  compute_and_plot.py  deny.py  draft_final_response.py  proceed.py  read_request.py  retrieve.py  retriever.py  tool_selector.py  understand.py
app/rag/: __init__.py  _classes.py  _utils.py  chunker.py  embedder.py  ingest.py  preprocess.py  retriever.py  vectorstore.py
