[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OptiSAR"
version = "0.1"
description = "A mission design AI agent"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Om Yeole" }
]
requires-python = ">=3.12"

dependencies = [

]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]